<resources>
    <string name="app_name">Study in Denmark</string>
    <string name="nav_home">Home</string>
    <string name="nav_call">Call</string>
    <string name="nav_search">search</string>
    <string name="nav_mail">Email</string>
    <string name="StudyConsultants">Contact Study Consultants</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="SEND">SEND</string>
    <string name="home_title">Do you want to study in Denmark?</string>
    <string name="head_title">Study in Denmark</string>
    <string name="howToApply">Applying through optagelse.dk</string>
    <string name="Fee_Scholarship">Fee_Scholarship</string>
    <string name="login">login/Register</string>
    <string name="loginPage">login</string>
    <string name="register">Register</string>
    <string name="accomodation">Accomodation</string>
    <string name="Register">Register</string>
    <string name="studyOption">Study Options</string>
    <string name="livingWorkin">Living and working in DK</string>
    <string name="teachinStyle">Teaching style in DK</string>
    <string name="navigation_open_drawer">Open drawerK</string>
    <string name="navigation_close_drawer">Close drawerK</string>
    <string name="homeLongtext">Studying abroad is like any travel
        - it inspires you to see things in new ways. We invite you to study in Denmark
        - to be inspired and to gain an excellent foundation for your future career.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_logOut">Logout</string>
    <string name="logout">Thank you for visiting Study in Denmark</string>
    <string name="app_deadline">Application deadline March 22, 2021</string>
    <string name="nav_Deadline">Application deadline</string>
    <string name="Rv_title">Univerity</string>
    <string name="listOfUni">Danish university PhD positions</string>
    <string name="Login">Login</string>
    <string name="BookSearch">Book Search</string>
    <string name="Search_">Search</string>
    <string name="optagelseDk">Applications to undergradute higher education in Denmark
        are assessed locally at the institutions but coordinated centrally in The Coordinated
        Admission. Consequently prospective students do not apply directly to any single
        educational institution, but through the national admission website:
        www.optagelse.dk \n The Ministry of higher education in Denmark lines up the rules
        for applying to a Danish Education with a foreign exam. However, it is the individual
        educational institution that evaluates your application and assesses whether you meet
        the entry requirements. Optagelse.dk is where you build your digital applications and
        attach documents for assessment by the institutions to which you wish to apply.</string>
    <string name="Visas">Permits and Visas</string>
    <string name="health_Saftey">Health and Safety</string>
    <string name="bookSearch">Book Search</string>
    <string name="text_life">Denmark is located in northern Europe and is part of Scandinavia. Denmark consists of the Jutland peninsula, the larger islands of Zealand, Funen, and Lolland-Falster and 429 other named islands between the North Sea and the Baltic Sea, 72 of which are inhabited. When you live in Denmark, you can enjoy a balanced lifestyle with time for both work and leisure. And while there is a strong respect for the community, there is also a strong emphasis on personal freedom and the opportunity to pursue and fulfill individual potential.</string>
    <string name="LivinginDenmark">Living in Denmark</string>
    <string name="Text_Health">Denmark is one of the world’s safest countries. Crime rates are low – plus you get access to a comprehensive public healthcare system.</string>
    <string name="healtcare">As a student and resident in Denmark you will have access to the Danish healthcare system. Here is what you need to know. The Danish healthcare system offers equal and universal access for all residents. As an international student and resident in Denmark you will have access to free medical treatments with some exceptions, such as dental care and physiotherapy.</string>
    <string name="TextVisa">We want to make it easy for you to come to Denmark and experience our first-class education. But obviously, there are some official forms to be filled first. Hopefully, this shouldn’t prove too complicated.</string>
    <string name="cpr">How do I get a Danish ID-number? (CPR)</string>
    <string name="vss">"To obtain your personal ID-number as an international student in Denmark you will need to register with the Danish Civil Registration System to obtain your personal ID number ('CPR number') while studying in Denmark.  Once registered you will be allocated a Civil Personal Registration (CPR) number. The CPR number is unique to the person and is used in Denmark as an ID number.  Almost all public authorities use the CPR registry system to e.g. avoid duplicate registration and errors with regards to a person's identity. "</string>
    <string name="workindenmark">To have a good start in your working life in Denmark, it is a good idea to get to know how the Danish labour market works, including formalities, working conditions and workplace culture.  It may be structured and work differently than what you are used to.  But there is no reason to worry, since the job satisfaction rating in Denmark is among the highest in Europe.  The Danish labour market is internationally known for its ‘flexicurity model’. A mix of the terms ‘flexibility’ and ‘security’, this concept refers to a welfare state model that combines a flexible labour market with social security for all workers. Most labour market issues are settled by employers and employees rather than by law. Employees choose a union representative who undertakes local negotiations on wages and other work conditions with the employer. In many work places, professional organisations play an active role and approximately six out of ten employees are members of a trade union.</string>
    <string name="options_text">You can choose between five types of Danish educational institutions:  Universities University Colleges Business Academies Artistic Higher Education Institutions Schools of Maritime Education and Training</string>
    <string name="options_text1">Danish higher education institutions offer a range of opportunities for international students. More than 600 programmes are taught in English - all internationally recognised and of high quality</string>
</resources>
