<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="5dp">

    <TextView
        android:id="@+id/heading_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/StudyConsultants"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/Subject"
        android:inputType="text"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|left"
        android:hint="@string/Message"
        android:lines="10"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/SEND"
        android:textSize="20dp"
        android:textStyle="bold" />


</LinearLayout>


