<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deadlineText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:textAlignment="gravity"
    tools:context=".Home_fragment">


    <TextView
        android:id="@+id/studyText"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/Button_apply"
        android:layout_width="118dp"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="241dp"
        app:srcCompat="@drawable/apply" />

    <TextView
        android:id="@+id/applyText"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_below="@+id/Button_apply"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="266dp"
        android:layout_marginRight="3px"
        android:layout_marginBottom="541dp"
        android:text="@string/howToApply"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/button_scholarship"
        android:layout_width="119dp"
        android:layout_height="83dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="55dp"
        app:srcCompat="@drawable/book" />

    <TextView
        android:id="@+id/ScholarText"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_below="@+id/button_scholarship"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="239dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="545dp"
        android:gravity="center"
        android:text="@string/Fee_Scholarship"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />


</RelativeLayout>