<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <ImageButton
        android:id="@+id/imgVisa"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/visas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/livingInDk_Visas"
        app:layout_constraintVertical_bias="0.007" />

    <ImageButton
        android:id="@+id/imgHealth"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/health"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/health"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/health"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/Black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/health_Saftey"
        android:textColor="@color/Light_Yellow"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/livingInDk_Visas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <TextView
        android:id="@+id/livingInDk_Visas"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/Black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Visas"
        android:textColor="@color/Light_Yellow"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <TextView
        android:id="@+id/lifeText"
        android:layout_width="283dp"
        android:layout_height="277dp"
        android:text="@string/text_life"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

</androidx.constraintlayout.widget.ConstraintLayout>









